# das-builder

./: README.md  pyproject.toml
.github/workflows/: auto_deps.yml  autodep.yml  formatter.yml  main.yml
dahbuilder/templates/: conan_build.sh
das_builder/: console.py  main.py  utils.py
das_builder/templates/: conan_build.sh
tests/: test_running.py  test_searching.py
