[tool.poetry]
name = "das-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.4.1"
toml = "^0.10.2"
Jinja2 = "^2.11.2"

[tool.poetry.scripts]
das-builder = "das_builder.console:main"


[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
